MMA-7441 Trekk ut tilgangslogikk i safselvbetjening i en frittstående modul som kan brukes i andre apper